--- a/css/pages.css
+++ b/css/pages.css
@@ -322,10 +322,16 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  background-color: var(--bg);
+  color: var(--ink);
   background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L6 6L11 1' stroke='%237A7E8E' stroke-width='1.5'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 0 center;
   padding-right: 20px;
+}
+.form-select option {
+  background-color: var(--bg);
+  color: var(--ink);
 }
 .form-error {
   font-size: 11px;
